--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -51,6 +51,7 @@ services:
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
       - CHANNEL_LAYERS_HOST=redis://redis:6379/1
       - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS}
+      - CSRF_TRUSTED_ORIGINS=${CSRF_TRUSTED_ORIGINS}
       - EMAIL_BACKEND=${EMAIL_BACKEND}
       - EMAIL_HOST=${EMAIL_HOST}
       - EMAIL_PORT=${EMAIL_PORT}
@@ -138,6 +139,7 @@ services:
       - DB_PORT=5432
       - REDIS_URL=redis://redis:6379/0
       - CHANNEL_LAYERS_HOST=redis://redis:6379/1
+      - CSRF_TRUSTED_ORIGINS=${CSRF_TRUSTED_ORIGINS}
     depends_on:
       - postgres
       - redis
