--- a/precious-vault-backend/Dockerfile
+++ b/precious-vault-backend/Dockerfile
@@ -25,6 +25,7 @@ WORKDIR /app
 # Install runtime dependencies
 RUN apt-get update && apt-get install -y \
     postgresql-client \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy Python packages from builder
