--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -35,7 +35,7 @@ services:
       context: ./precious-vault-backend
       dockerfile: Dockerfile
     restart: always
-    command: gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 3
+    command: gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 3 --timeout 120
     environment:
       - DEBUG=False
       - SECRET_KEY=${SECRET_KEY}
