feat: complete implementation of all features including admin panel, KYC management, and delivery tracking

--- a/precious-vault-backend/.env.example
+++ b/precious-vault-backend/.env.example
@@ -27,10 +27,10 @@ JWT_ACCESS_TOKEN_LIFETIME=60
 JWT_REFRESH_TOKEN_LIFETIME=1440
 
 # CORS
-CORS_ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
+CORS_ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000,http://localhost:3001
 
-# Email (for production)
-EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
+# Email (Set USE_SMTP_EMAIL=true to use SMTP, false to use file-based)
+USE_SMTP_EMAIL=false
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
