--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
       - CHANNEL_LAYERS_HOST=redis://redis:6379/1
-      - CORS_ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000,http://localhost:80,http://localhost,http://127.0.0.1
+      - CORS_ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000,http://localhost:3001,http://localhost:80,http://localhost,http://127.0.0.1
     depends_on:
       postgres:
         condition: service_healthy
@@ -165,6 +165,21 @@ services:
     environment:
       - VITE_API_URL=http://localhost:8000/api
       - VITE_WS_URL=ws://localhost:9000/ws
+    depends_on:
+      - backend
+    networks:
+      - precious-vault-network
+
+  # Admin Frontend
+  admin-frontend:
+    build:
+      context: ./precious-vault-admin
+      dockerfile: Dockerfile
+    container_name: precious-vault-admin
+    ports:
+      - "3001:80"
+    environment:
+      - VITE_API_URL=http://localhost:8000/api
     depends_on:
       - backend
     networks:
