--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,21 +44,8 @@ services:
       - ./precious-vault-backend:/app
     ports:
       - "8000:8000"
-    environment:
-      - DEBUG=True
-      - SECRET_KEY=dev-secret-key-change-in-production
-      - ALLOWED_HOSTS=localhost,127.0.0.1,backend
-      - DB_ENGINE=django.db.backends.postgresql
-      - DB_NAME=precious_vault
-      - DB_USER=postgres
-      - DB_PASSWORD=postgres
-      - DB_HOST=postgres
-      - DB_PORT=5432
-      - REDIS_URL=redis://redis:6379/0
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://redis:6379/0
-      - CHANNEL_LAYERS_HOST=redis://redis:6379/1
-      - CORS_ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000,http://localhost:3001,http://localhost:80,http://localhost,http://127.0.0.1
+    env_file:
+      - .env
     depends_on:
       postgres:
         condition: service_healthy
@@ -76,20 +63,10 @@ services:
     command: celery -A config worker -l info
     volumes:
       - ./precious-vault-backend:/app
+    env_file:
+      - .env
     environment:
-      - DEBUG=True
-      - SECRET_KEY=dev-secret-key-change-in-production
       - SKIP_MIGRATIONS=true
-      - DB_ENGINE=django.db.backends.postgresql
-      - DB_NAME=precious_vault
-      - DB_USER=postgres
-      - DB_PASSWORD=postgres
-      - DB_HOST=postgres
-      - DB_PORT=5432
-      - REDIS_URL=redis://redis:6379/0
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://redis:6379/0
-      - CHANNEL_LAYERS_HOST=redis://redis:6379/1
     depends_on:
       - postgres
       - redis
@@ -105,20 +82,10 @@ services:
     command: celery -A config beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler
     volumes:
       - ./precious-vault-backend:/app
+    env_file:
+      - .env
     environment:
-      - DEBUG=True
-      - SECRET_KEY=dev-secret-key-change-in-production
       - SKIP_MIGRATIONS=true
-      - DB_ENGINE=django.db.backends.postgresql
-      - DB_NAME=precious_vault
-      - DB_USER=postgres
-      - DB_PASSWORD=postgres
-      - DB_HOST=postgres
-      - DB_PORT=5432
-      - REDIS_URL=redis://redis:6379/0
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://redis:6379/0
-      - CHANNEL_LAYERS_HOST=redis://redis:6379/1
     depends_on:
       - postgres
       - redis
@@ -136,18 +103,10 @@ services:
       - ./precious-vault-backend:/app
     ports:
       - "9000:9000"
+    env_file:
+      - .env
     environment:
-      - DEBUG=True
-      - SECRET_KEY=dev-secret-key-change-in-production
       - SKIP_MIGRATIONS=true
-      - DB_ENGINE=django.db.backends.postgresql
-      - DB_NAME=precious_vault
-      - DB_USER=postgres
-      - DB_PASSWORD=postgres
-      - DB_HOST=postgres
-      - DB_PORT=5432
-      - REDIS_URL=redis://redis:6379/0
-      - CHANNEL_LAYERS_HOST=redis://redis:6379/1
     depends_on:
       - postgres
       - redis
