Generate metal image URLs from FX base URL configuration

--- a/fortress-vault-backend/.env.example
+++ b/fortress-vault-backend/.env.example
@@ -37,6 +37,16 @@ EMAIL_USE_TLS=True
 EMAIL_HOST_USER=
 EMAIL_HOST_PASSWORD=
 
-# Metal Price API (placeholder)
+# Metal Price API
+# Provider options: metalsapi (default) or exchangerate_host
+METAL_PRICE_API_PROVIDER=metalsapi
 METAL_PRICE_API_KEY=
-METAL_PRICE_API_URL=https://api.metalpriceapi.com/v1/latest
+METAL_PRICE_API_URL=https://metals-api.com/api/latest
+
+# FX / metal feed (exchangerate.host)
+FX_API_KEY=
+FX_BASE_URL=https://api.exchangerate.host
+# Optional custom path to metal icons served by your provider/CDN
+FX_METAL_IMAGE_BASE_URL=https://api.exchangerate.host/assets/metals
+
+
