Fix production compose network name for celery-beat

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -120,7 +120,7 @@ services:
       - postgres
       - redis
     networks:
-      - precious-vault-network
+      - fortress-vault-network
 
   # Channels (WebSocket)
   channels:
